--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -50,13 +50,14 @@
 }
 
 footer {
-    position:relative;
+    position:fixed;
     bottom:0;
     left:0;
     width:100%;
     max-height: 250px;
     background-color:$background;
     margin:none!important;
+    
     // overflow:hidden;
 }
 
