--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,7 +34,9 @@
   // outline:solid green;
 }
 
-
+main{
+  padding-bottom:250px;
+}
 
 main.splash {
     flex-grow: 1;
